      * Changed the visuals for some of the nebulas (PSO, Mizar)
      * Pirate bribes cost more depending on your fleet and are based on points not mass
      * Missions are introduced less all at once to the player
      * Blink drives are more flexible but use energy and generate heat
      * Razor class weapons have been completely reworked
      * diy-nerds: improved reward
   * Quality of Life
      * Significantly improved autonav
         * Configurable and can use lanes
         * More efficient at reaching target locations
         * New option like follow pilots through jumps or brake when going to positions
      * Make it explicit when all the escorts have jumped or landed
      * Escorts will keep their same loadout until the game restarts
      * Player ship is no longer translucent when in stealth as it is redundant with the stealth icon
      * Show enemy/ally factions in the faction standing info window
      * Space dust is properly anti-aliased
      * Minor speed ups to patrol lane computations
      * Try to enforce minimum number of articles in the news
      * Independent patrol and bounty missions can be completed on more planets and stations
      * Can hide or prioritize missions from the info menu
      * Manual aiming model aims at the mouse location when the mouse is visible
      * Travelling merchant tells you when new wares are available and should be easier to find
      * Lua Love API should be better at handling input and not apply keys held before started
      * Increase time compression when disabled
      * Inverted how hide, evasion, and stealth value percent bonuses work. Now lower is better
      * Hide locked slots without outfits as the player can't do anything with them
      * Added volley mode to weapon sets that makes weapons fire as fast as possible, instead of staggered
      * Autonav options are now player-specific and accessible via the info menu settings button